crates/analyzer/tests/snapshots/errors__traits_as_fields.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `Foo` is not a type name
  ┌─ compile_errors/traits_as_fields.fe:1:7
  │
1 │ trait Foo {}
  │       ^^^ `Foo` is defined here as a trait
  ·
4 │     val: Foo
  │          ^^^ `Foo` is used here as a type

error: `Foo` is not a type name
  ┌─ compile_errors/traits_as_fields.fe:1:7
  │
1 │ trait Foo {}
  │       ^^^ `Foo` is defined here as a trait
  ·
8 │     val: Foo
  │          ^^^ `Foo` is used here as a type


